--- a/src/EventPi.Services.Camera.Ui/WeldingRecognitionControls.razor
+++ b/src/EventPi.Services.Camera.Ui/WeldingRecognitionControls.razor
@@ -120,7 +120,7 @@
         _brightPixels = e.TotalBrightPixels;
         _darkPixels = e.TotalDarkPixels;
         _isWelding = _recognitionService.IsWelding;
-        StateHasChanged();
+        InvokeAsync(StateHasChanged);
     }
    
 
