--- a/src/EventPi.Services.Camera.Ui/WeldingRecognitionControls.razor
+++ b/src/EventPi.Services.Camera.Ui/WeldingRecognitionControls.razor
@@ -29,40 +29,14 @@
                             <td><MudSlider @bind-Value="_cmd.DarkPixelsBorder" Min="0" Max="255" Step="1" Color="Color.Info"></MudSlider></td>
                 </tr>
                 <tr>
-                            <td><MudNumericField Label="Bright Pixels amount to switch:" @bind-Value="@_recognitionService.BrightOffset" For="() => _recognitionService.BrightOffset"></MudNumericField></td>
-                            <td><MudSlider @bind-Value="_recognitionService.BrightOffset" Min="0" Max="100" Step="1" Color="Color.Info"></MudSlider></td>
+                            <td><MudNumericField Label="Bright Pixels border %:" @bind-Value="@_cmd.WeldingValue" For="() => _cmd.WeldingValue"></MudNumericField></td>
+                            <td><MudSlider @bind-Value="_cmd.WeldingValue" Min="0" Max="100" Step="1" Color="Color.Info"></MudSlider></td>
                 </tr>
                 <tr>
-                            <td><MudNumericField Label="Dark Pixels amount to switch:" @bind-Value="@_recognitionService.DarkOffset" For="() => _recognitionService.DarkOffset"></MudNumericField></td>
-                            <td><MudSlider @bind-Value="_recognitionService.DarkOffset" Min="0" Max="100" Step="1" Color="Color.Info"></MudSlider></td>
+                            <td><MudNumericField Label="Dark Pixels border %:" @bind-Value="@_cmd.NonWeldingValue" For="() => _cmd.NonWeldingValue"></MudNumericField></td>
+                            <td><MudSlider @bind-Value="_cmd.NonWeldingValue" Min="0" Max="100" Step="1" Color="Color.Info"></MudSlider></td>
                 </tr>
-              
-                <tr>
-                    <td style="width: 150px"><MudTextField Value="@_recognitionService.CurrentAppliedProfile.Shutter" Label="Shutter"> </MudTextField></td>
-                    <td style="width: 150px"><MudTextField Value="@_recognitionService.CurrentAppliedProfile.AnalogueGain" Label="Analogue Gain"> </MudTextField></td>
-                    <td style="width: 150px"><MudTextField Value="@_recognitionService.CurrentAppliedProfile.Brightness" Label="Brightness"> </MudTextField></td>
-                    <td style="width: 150px"><MudTextField Value="@_recognitionService.CurrentAppliedProfile.Contrast" Label="Contrast"> </MudTextField></td>
-                    <td style="width: 150px"><MudTextField Variant="Variant.Text" Value="@Enum.GetName(typeof(HdrModeEnum), _recognitionService.CurrentAppliedProfile.HdrMode)" Label="HDR mode"> </MudTextField></td>
-
-
-                </tr>
-                <tr>
-                    <td style="width: 150px"> <MudText> Grpc status:</MudText></td>
-                    <td> <MudIcon Icon="@Icons.Filled.Circle" Color="@(_isConnectedViaGrpcToRpiCam ? Color.Success : Color.Error)"></MudIcon></td>
-                </tr>
-                <tr>
-                    <td style="width: 150px"> <MudText> Bright pixels: @_brightPixels </MudText></td>
-                </tr>
-                <tr>
-                    <td style="width: 150px"> <MudText> Dark pixels: @_darkPixels </MudText></td>
-                </tr>
-                <tr>
-                    <td style="width: 150px"> <MudText> Current applied shutter: @_currentAppliedShutter </MudText></td>
-                </tr>
-                <tr>
-                    <td style="width: 150px"> <MudText> Welding status:</MudText></td>
-                    <td> <MudIcon Icon="@Icons.Filled.Circle" Color="@(_isWelding ? Color.Success : Color.Error)"></MudIcon></td>
-                </tr>
+             
                 </tbody>
             </MudSimpleTable>
             <MudButtonGroup Variant="Variant.Filled" Style="align-self:center" Size="Size.Large">
