--- a/src/EventPi.AutoUpdater.Host/Components/Pages/Home.razor
+++ b/src/EventPi.AutoUpdater.Host/Components/Pages/Home.razor
@@ -1,24 +1,52 @@
 ﻿@page "/"
 @using EventPi.AutoUpdate
+@inject DockerComposeConfigurationRepository repo
 @inject UpdateProcessManager mgm
-
 
 <PageTitle>Home</PageTitle>
 
-<h1>AutoUpdater</h1>
 
-@foreach (var i in mgm.GetPackages())
-{
-    <p>Name: @i.FriendlyName</p>
-    <p>Name: @i.CurrentVersion</p>
-    @foreach(var v in i.Versions()){
-        <p>@v</p>
+<MudStack >
+    @foreach (var i in repo.GetPackages())
+    {
+        <MudPaper Class="pa-4" Elevation="2">
+            <MudField Label="Name">@i.FriendlyName</MudField>
+            <MudField Label="Current version">@i.CurrentVersion</MudField>
+            <MudSelect Label="Available versions:" T="GitTagVersion">
+                @foreach (var v in i.Versions())
+                {
+                    <MudSelectItem Value="@v" T="GitTagVersion" />
+                }
+
+           </MudSelect>
+
+            @foreach (var x in i.Containers())
+            {
+                <MudField Label="App">@x.Name</MudField>
+                <MudSimpleTable Hover="true" Dense="true" FixedHeader="true" Style="height:300px">
+                    <thead>
+                    <tr>
+                        <th>Log</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach(var i in x.Logs())
+                    {
+                        <tr>
+                            <td>@i</td>
+                        </tr>
+                    }
+                </tbody>
+                </MudSimpleTable>
+            }
+
+        </MudPaper>
     }
-}
+</MudStack>
 
 
 
-<button @onclick="@OnClick">Check</button>
+<MudButton @OnClick="@OnClick">Update all</MudButton>
 
 @code {
     private bool _isUpdateAvailable;
