--- a/src/EventPi.AutoUpdater.Host/Components/Layout/MainLayout.razor
+++ b/src/EventPi.AutoUpdater.Host/Components/Layout/MainLayout.razor
@@ -13,7 +13,7 @@
 
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudText Typo="Typo.h5" Class="ml-3">RPI Container Manager</MudText>
+        <MudText Typo="Typo.h5" Class="ml-3">Package Manager</MudText>
         <MudSpacer />
         <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
     </MudAppBar>
