--- a/src/EventPi.AutoUpdater.Host/Components/_Imports.razor
+++ b/src/EventPi.AutoUpdater.Host/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using EventPi.AutoUpdater.Host
 @using EventPi.AutoUpdater.Host.Components
 @using MudBlazor
+@using ModelingEvolution.Observable
+@using ModelingEvolution.Observable.Blazor
