--- a/src/EventPi.AutoUpdater.Host/Components/Pages/Home.razor
+++ b/src/EventPi.AutoUpdater.Host/Components/Pages/Home.razor
@@ -26,7 +26,7 @@
 <MudButton Variant="Variant.Filled" Size="Size.Large" Class="ma-4" OnClick="@OnClick">Update all</MudButton>
 
  <MudPaper Class="pa-4" Elevation="2">
-    <MudSwitch Label="VPN Connection Support Status:" @bind-Value="IsVpnEnabled" Color="Color.Success" />
+    <MudSwitch Label="VPN Connection Support Status" @bind-Value="IsVpnEnabled" Color="Color.Success" />
  </MudPaper>
 
 
