--- a/src/EventPi.Services.Camera.Ui/CameraControls.razor
+++ b/src/EventPi.Services.Camera.Ui/CameraControls.razor
@@ -1,6 +1,7 @@
 ﻿@using EventPi.Services.Camera.Contract
 @using Microsoft.AspNetCore.Http
 @using ModelingEvolution.Observable.Blazor
+@rendermode InteractiveServer
 @inject CameraControlVmRegister _vmRegister
 
 <MudStack>
