--- a/src/EventPi.Services.Camera.Ui/_Imports.razor
+++ b/src/EventPi.Services.Camera.Ui/_Imports.razor
@@ -3,3 +3,4 @@
 @using PointD = ModelingEvolution.Drawing.Point<double>
 @using VectorD = ModelingEvolution.Drawing.Vector<double>
 @using BezierCurveD = ModelingEvolution.Drawing.BezierCurve<double>
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
