--- a/src/EventPi.AutoUpdater.Host/Components/App.razor
+++ b/src/EventPi.AutoUpdater.Host/Components/App.razor
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="EventPi.AutoUpdater.Host.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet @rendermode="InteractiveServer" />
+    <HeadOutlet  />
 </head>
 
 <body>
