--- a/src/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm/Components/App.razor
+++ b/src/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm/Components/App.razor
@@ -5,16 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
     <link rel="stylesheet" href="@Assets["app.css"]" />
-    <link rel="stylesheet" href="@Assets["EventPi.Pwm.Ui.styles.css"]" />
+    <link rel="stylesheet" href="@Assets["EventPi.Pwm.Ui.Wasm.styles.css"]" />
     <ImportMap />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet @rendermode="InteractiveServer" />
+    <HeadOutlet @rendermode="InteractiveWebAssembly" />
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="InteractiveWebAssembly" />
     <script src="_framework/blazor.web.js"></script>
 </body>
 
