--- a/src/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm.Client/SignalListControl.razor
+++ b/src/EventPi.Pwm.Ui.Wasm/EventPi.Pwm.Ui.Wasm.Client/SignalListControl.razor
@@ -1,6 +1,6 @@
 ﻿@using EventPi.SignalProcessing
 <div>
-    <h3>Signal Sinks</h3>
+    <h3>Signals</h3>
     @if (SignalSinks == null || !SignalSinks.Any())
     {
         <p>No Signal Sinks available.</p>
